# cnam_iot_thermal_gateway

./: .gitignore
ec2_api/: .env.example  pyproject.toml
ec2_api/src/: __init__.py  main.py
gateway/: pyproject.toml
gateway/src/: main.py
