[project]
name = "iot-thermal-api"
version = "0.1.0"
description = "Flask API running on EC2 for temperature monitoring and alerting"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "boto3>=1.26.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1.0"]
